--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="../css/custom.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar navbar-expand-lg flex-column">
@@ -39,8 +42,68 @@
             <button class="btn btn-primary ms-4 fs-1-1 d-xs-none d-sm-none d-lg-block d-xl-block" type="button">Contact Us →</button>
         </nav>
         <div class="rounded-pill horizontal-bar d-xs-none d-sm-none d-lg-block d-xl-block"></div>
-        
     </header>
+    <div>
+
+    </div>
+    <footer class="cc-footer mt-5">
+        <div class="container mb-3">
+            <div class="row">
+                <div class="col-4">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-1">
+                            <a href="">Home</a>
+                        </li>
+                        <li class="mb-1">
+                            <a href="">Services</a>
+                        </li>
+                        <li class="mb-1">
+                            <a href="">About</a>
+                        </li>
+                        <li class="mb-1">
+                            <a href="">Portfolio</a>
+                        </li>
+                        <li class="mb-1">
+                            <a href="">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <h5>Services</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-1">
+                            <a href="">Terrain Mapping & Survey</a>
+                        </li>
+                        <li class="mb-1">
+                            <a href="">Event Aerial Coverage</a>
+                        </li>
+                        <li class="mb-1">
+                            <a href="">Marketing & Promotional Content</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <h5>Contact</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-1">
+                            Call: +1 (xxx) xxx-xxxx
+                        </li>
+                        <li class="mb-3">
+                            Email: contact@cloudcapture.ca
+                        </li>
+                        <li>
+                            123 Fake Ave, Ottawa, ON A1A 1A1
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="cc-footer-copyright d-flex justify-content-center py-2">
+            <p>© CloudCapture 2025. All rights reserved</p>
+        </div>
+    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
