--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg flex-column">
+    <header class="navbar navbar-expand-lg flex-column mb-5">
         <nav class="container-xxl">
             <a class="navbar-brand me-0" href="#">
                 <svg width="222" height="52" viewBox="0 0 222 52" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -43,8 +43,43 @@
         </nav>
         <div class="rounded-pill horizontal-bar d-xs-none d-sm-none d-lg-block d-xl-block"></div>
     </header>
-    <div>
-
+    <div class="mb-5">
+        <div class="hero-banner mb-5">
+            <div class="hero-text">
+                <h1 class="mb-3">Capturing <span class="underline">Professional</span> Footage From the <span class="underline">Clouds</span></h1>
+                <p>At CloudCapture, we specialize in breathtaking aerial photography and videography that takes your vision to new heights.</p>
+                <p>Whether it's for real estate, events, or creative projects, we deliver stunning visuals with precision and creativity.</p>
+            </div>
+        </div>
+        <div class="container d-flex align-items-center flex-column">
+            <div class="mb-3 text-center">
+                <h2 class="underline fw-bolder">Explore Our Services</h2>
+                <p>We offer a variety of drone services. Learn about them below.</p>
+            </div>
+            <div class="row homepage-service-row">
+                <div class="card homepage-service-card text-bg-dark col">
+                    <img src="../images/terrain-service-homepage.png" class="card-img">
+                    <div class="card-img-overlay d-flex align-items-center justify-content-center flex-column text-center">
+                        <h4 class="card-title">Terrain Mapping & Survey</h4>
+                        <p class="card-text underline"><a href="">Learn More</a></p>
+                    </div>
+                </div>
+                <div class="card homepage-service-card text-bg-dark col">
+                    <img src="../images/aerial-service-homepage.png" class="card-img">
+                    <div class="card-img-overlay d-flex align-items-center justify-content-center flex-column text-center">
+                        <h4 class="card-title">Event Aerial Coverage</h4>
+                        <p class="card-text underline"><a href="">Learn More</a></p>
+                    </div>
+                </div>
+                <div class="card homepage-service-card text-bg-dark col">
+                    <img src="../images/marketing-service-homepage.png" class="card-img">
+                    <div class="card-img-overlay d-flex align-items-center justify-content-center flex-column text-center">
+                        <h4 class="card-title">Marketing & Promotional Content</h4>
+                        <p class="card-text underline"><a href="">Learn More</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="cc-footer mt-5">
         <div class="container mb-3">
