Add confirmation message to contact form

--- a/public/contact.html
+++ b/public/contact.html
@@ -52,7 +52,7 @@
                     <p>Please allow 24 hours for a response.</p>
                 </div>
                 <div class="container">
-                    <form class="">
+                    <form class="" id="contact-form">
                         <div class="row g-2">
                             <div class="col-12">
                                 <h4 class="text-light mb-0">Contact Us</h4>
@@ -78,6 +78,20 @@
                         </div>
                     </form>
                 </div>
+            </div>
+            <div class="container contact-confirmation d-none">
+                <svg class="mb-3" width="85" height="85" viewBox="0 0 85 85" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_22_6)">
+                    <path d="M42.5 0C65.9721 0 85 19.0279 85 42.5C85 65.9721 65.9721 85 42.5 85C19.0279 85 0 65.9721 0 42.5C0 19.0279 19.0279 0 42.5 0ZM42.5 5.3125C21.9619 5.3125 5.3125 21.9619 5.3125 42.5C5.3125 63.0381 21.9619 79.6875 42.5 79.6875C63.0381 79.6875 79.6875 63.0381 79.6875 42.5C79.6875 21.9619 63.0381 5.3125 42.5 5.3125ZM60.0865 31.5527C61.1239 32.5901 61.1239 34.2719 60.0865 35.3092L41.304 54.0918C40.3408 55.055 38.8218 55.1238 37.7792 54.2982L37.5475 54.0918L26.278 42.8223C25.2407 41.7849 25.2407 40.1031 26.278 39.0658C27.3153 38.0284 28.9972 38.0284 30.0345 39.0658L39.4239 48.4551L56.33 31.5527C57.3674 30.5154 59.0492 30.5154 60.0865 31.5527Z" fill="#0465E1"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_22_6">
+                    <rect width="85" height="85" fill="white"/>
+                    </clipPath>
+                    </defs>
+                </svg>
+                <h3 class="underline mb-3">Thank You</h3>
+                <p>We have received your message and will try to be in touch shortly.</p>
             </div>
         </div>
         
@@ -140,6 +154,7 @@
         </div>
     </footer>
     
+    <script src="/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
