Add about-us page

--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
     <link href="../css/custom.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/public/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Portfolio</a>
@@ -109,7 +109,7 @@
                             <a href="">Services</a>
                         </li>
                         <li class="mb-1">
-                            <a href="">About</a>
+                            <a href="/public/about.html">About</a>
                         </li>
                         <li class="mb-1">
                             <a href="">Portfolio</a>
