Add portfolio page

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Portfolio</title>
     <link href="../css/custom.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,10 +32,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/public/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/public/portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="#">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -43,23 +43,60 @@
         </nav>
         <div class="rounded-pill horizontal-bar d-xs-none d-sm-none d-lg-block d-xl-block"></div>
     </header>
-    <div class="mb-5">
-        
-        <div class="container mb-6">
-            <h2 class="underline fw-bolder mb-4">About Us</h2>
-            <div class="container d-flex flex-row gap-5">
-                <img src="/images/about-us-drone.png">
-                <div>
-                    <h4 class="text-primary fw-bold">CloudCapture</h4>
-                    <p class="lh-lg">At CloudCapture, we specialize in delivering professional aerial photography and videography services tailored to your unique needs. Based in Ottawa and proudly operating since 2023, CloudCapture is comprised of a small team of individuals passionate about capturing stunning visuals from above.</p>
-                    <p class="lh-lg">Whether you’re planning an event, showcasing a property, or creating impactful promotional material, CloudCapture is here to bring your vision to life—one breathtaking shot at a time.</p>
+    <div class="container mb-5">
+        <div class="row portfolio-grid justify-content-center">
+            <div class="col-md-auto">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/images/portfolio/portfolio-quarry.png">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <img src="/images/portfolio/portfolio-coal.png">
+                    </div>
+                    <div class="col-6">
+                        <img src="/images/portfolio/portfolio-dirt-road.png">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/images/portfolio/portfolio-japanese-river.png">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <h2 class="underline fw-bolder mb-4">Want to Join Our Team?</h2>
-            <p class="lh-lg">At CloudCapture, we’re always looking for passionate individuals who share our love for creativity, technology, and aerial photography. If you have a keen eye for detail, a knack for storytelling, and a desire to be part of a growing business, we’d love to hear from you!</p>
-            <p class="lh-lg">Whether you’re a seasoned drone operator or a marketing expert, there’s room for talent at CloudCapture. Get in touch and let’s explore how we can work together to elevate the skies.</p>
+            <div class="col-md-auto">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/images/portfolio/portfolio-desert.png">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/images/portfolio/portfolio-topdown-bridge.png">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-auto">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/images/portfolio/portfolio-highrises.png">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <img src="/images/portfolio/portfolio-sunset-bridge.png">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <img src="/images/portfolio/portfolio-forest-bridge.png">
+                    </div>
+                    <div class="col-6">
+                        <img src="/images/portfolio/portfolio-muddy-river.png">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="cc-footer mt-5">
@@ -75,7 +112,7 @@
                             <a href="/public/about.html">About</a>
                         </li>
                         <li class="mb-1">
-                            <a href="/public/portfolio.html/public/portfolio.html">Portfolio</a>
+                            <a href="/public/portfolio.html">Portfolio</a>
                         </li>
                         <li class="mb-1">
                             <a href="/public/contact.html">Contact</a>
