--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="/public/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="/public/portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +94,7 @@
                             <a href="/public/about.html">About</a>
                         </li>
                         <li class="mb-1">
-                            <a href="">Portfolio</a>
+                            <a href="/public/portfolio.html">Portfolio</a>
                         </li>
                         <li class="mb-1">
                             <a href="/public/contact.html">Contact</a>
