Add pages for services

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="">Terrain Mapping & Survey</a></li>
-                            <li><a class="dropdown-item" href="">Event Aerial Coverage</a></li>
-                            <li><a class="dropdown-item" href="">Marketing & Promotional Content</a></li>
+                            <li><a class="dropdown-item" href="/public/terrain.html">Terrain Mapping & Survey</a></li>
+                            <li><a class="dropdown-item" href="/public/event.html">Event Aerial Coverage</a></li>
+                            <li><a class="dropdown-item" href="/public/marketing.html">Marketing & Promotional Content</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -105,13 +105,13 @@
                     <h5>Services</h5>
                     <ul class="list-unstyled">
                         <li class="mb-1">
-                            <a href="">Terrain Mapping & Survey</a>
+                            <a href="/public/terrain.html">Terrain Mapping & Survey</a>
                         </li>
                         <li class="mb-1">
-                            <a href="">Event Aerial Coverage</a>
+                            <a href="/public/event.html">Event Aerial Coverage</a>
                         </li>
                         <li class="mb-1">
-                            <a href="">Marketing & Promotional Content</a>
+                            <a href="/public/marketing.html">Marketing & Promotional Content</a>
                         </li>
                     </ul>
                 </div>
