--- a/public/marketing.html
+++ b/public/marketing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Marketing Content</title>
     <link href="../css/custom.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,14 +28,14 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/public/terrain.html">Terrain Mapping & Survey</a></li>
                             <li><a class="dropdown-item" href="/public/event.html">Event Aerial Coverage</a></li>
-                            <li><a class="dropdown-item" href="/public/marketing.html">Marketing & Promotional Content</a></li>
+                            <li><a class="dropdown-item" href="#">Marketing & Promotional Content</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/public/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/public/portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="#">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -43,23 +43,28 @@
         </nav>
         <div class="rounded-pill horizontal-bar d-xs-none d-sm-none d-lg-block d-xl-block"></div>
     </header>
-    <div class="mb-5">
-        
-        <div class="container mb-6">
-            <h2 class="underline fw-bolder mb-4">About Us</h2>
-            <div class="container d-flex flex-row gap-5">
-                <img src="/images/about-us-drone.png">
-                <div>
-                    <h4 class="text-primary fw-bold">CloudCapture</h4>
-                    <p class="lh-lg">At CloudCapture, we specialize in delivering professional aerial photography and videography services tailored to your unique needs. Based in Ottawa and proudly operating since 2023, CloudCapture is comprised of a small team of individuals passionate about capturing stunning visuals from above.</p>
-                    <p class="lh-lg">Whether you’re planning an event, showcasing a property, or creating impactful promotional material, CloudCapture is here to bring your vision to life—one breathtaking shot at a time.</p>
+    <div class="container d-flex flex-row mb-5">
+        <div class="container service-img-layout">
+            <div class="row">
+                <div class="col-md-auto">
+                    <img src="/images/marketing-service/marketing-boats.png" alt="A drone shot of an open field">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-auto">
+                    <img src="/images/marketing-service/marketing-wastewater.png" alt="A faraway shot of a wooden farmhouse">
+                </div>
+                <div class="col-md-auto">
+                    <img src="/images/marketing-service/marketing-drone.png" alt="A drone in the sky above a hill">
                 </div>
             </div>
         </div>
         <div class="container">
-            <h2 class="underline fw-bolder mb-4">Want to Join Our Team?</h2>
-            <p class="lh-lg">At CloudCapture, we’re always looking for passionate individuals who share our love for creativity, technology, and aerial photography. If you have a keen eye for detail, a knack for storytelling, and a desire to be part of a growing business, we’d love to hear from you!</p>
-            <p class="lh-lg">Whether you’re a seasoned drone operator or a marketing expert, there’s room for talent at CloudCapture. Get in touch and let’s explore how we can work together to elevate the skies.</p>
+            <h2 class="underline fw-bolder mb-4">Marketing & Promotional Content</h2>
+            <p class="lh-lg">We specialize in creating stunning aerial visuals to help your business or project stand out. Whether you’re launching a product, promoting a property, or building a brand, our drone photography and videography services deliver fresh, dynamic perspectives that elevate your marketing efforts.</p>
+            <p class="lh-lg mb-5">From dramatic overhead shots to smooth cinematic sequences, we craft high-quality content tailored to your goals, perfect for commercials, social media, and promotional videos. Our visuals help tell your story in a compelling way, engaging your audience and showcasing what makes your business unique.</p>
+            <p class="fw-light text-muted fs-6">Ready to move forward or have questions? We’re here to help.</p>
+            <a class="btn btn-primary " href="/public/contact.html">Request a Quote</a>
         </div>
     </div>
     <footer class="cc-footer mt-5">
