Fix issue where nav dropdown was behind image on contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -22,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
-                <ul class="navbar-nav flex-row mx-auto gap-5 fs-1-1">
+                <ul class="navbar-nav flex-row mx-auto gap-5 fs-1-1" style="z-index: 2;">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                         <ul class="dropdown-menu">
