Revert "Move index to root to support github pages"
This reverts commit df48b7cc56900e7a94c1c0058b786563b2add510.

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li class="mb-1">
-                            <a href="/index.html">Home</a>
+                            <a href="/public/index.html">Home</a>
                         </li>
                         <li class="mb-1">
                             <a href="/public/about.html">About</a>
