Fix url in index page for github pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://tom-latimer.github.io/CloudCapture-Mockup/">
+<meta http-equiv="refresh" content="0; url=https://tom-latimer.github.io/CloudCapture-Mockup/public/index.html">
