Change image and page links to be relative

--- a/public/index.html
+++ b/public/index.html
@@ -26,20 +26,20 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/public/terrain.html">Terrain Mapping & Survey</a></li>
-                            <li><a class="dropdown-item" href="/public/event.html">Event Aerial Coverage</a></li>
-                            <li><a class="dropdown-item" href="/public/marketing.html">Marketing & Promotional Content</a></li>
+                            <li><a class="dropdown-item" href="terrain.html">Terrain Mapping & Survey</a></li>
+                            <li><a class="dropdown-item" href="event.html">Event Aerial Coverage</a></li>
+                            <li><a class="dropdown-item" href="marketing.html">Marketing & Promotional Content</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/public/about.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/public/portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-primary ms-4 fs-1-1 d-xs-none d-sm-none d-lg-block d-xl-block" type="button" href="/public/contact.html">Contact Us →</a>
+            <a class="btn btn-primary ms-4 fs-1-1 d-xs-none d-sm-none d-lg-block d-xl-block" type="button" href="contact.html">Contact Us →</a>
         </nav>
         <div class="rounded-pill horizontal-bar d-xs-none d-sm-none d-lg-block d-xl-block"></div>
     </header>
@@ -88,16 +88,16 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li class="mb-1">
-                            <a href="/public/index.html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="mb-1">
-                            <a href="/public/about.html">About</a>
+                            <a href="about.html">About</a>
                         </li>
                         <li class="mb-1">
-                            <a href="/public/portfolio.html">Portfolio</a>
+                            <a href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="mb-1">
-                            <a href="/public/contact.html">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -105,13 +105,13 @@
                     <h5>Services</h5>
                     <ul class="list-unstyled">
                         <li class="mb-1">
-                            <a href="/public/terrain.html">Terrain Mapping & Survey</a>
+                            <a href="terrain.html">Terrain Mapping & Survey</a>
                         </li>
                         <li class="mb-1">
-                            <a href="/public/event.html">Event Aerial Coverage</a>
+                            <a href="event.html">Event Aerial Coverage</a>
                         </li>
                         <li class="mb-1">
-                            <a href="/public/marketing.html">Marketing & Promotional Content</a>
+                            <a href="marketing.html">Marketing & Promotional Content</a>
                         </li>
                     </ul>
                 </div>
@@ -136,7 +136,7 @@
         </div>
     </footer>
     
-    <script src="/scripts/main.js"></script>
+    <script src="../scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
