Add service links to home page

--- a/public/index.html
+++ b/public/index.html
@@ -61,21 +61,21 @@
                     <img src="../images/terrain-service-homepage.png" class="card-img">
                     <div class="card-img-overlay d-flex align-items-center justify-content-center flex-column text-center">
                         <h4 class="card-title">Terrain Mapping & Survey</h4>
-                        <p class="card-text underline"><a href="">Learn More</a></p>
+                        <p class="card-text underline"><a href="terrain.html">Learn More</a></p>
                     </div>
                 </div>
                 <div class="card homepage-service-card text-bg-dark col">
                     <img src="../images/aerial-service-homepage.png" class="card-img">
                     <div class="card-img-overlay d-flex align-items-center justify-content-center flex-column text-center">
                         <h4 class="card-title">Event Aerial Coverage</h4>
-                        <p class="card-text underline"><a href="">Learn More</a></p>
+                        <p class="card-text underline"><a href="event.html">Learn More</a></p>
                     </div>
                 </div>
                 <div class="card homepage-service-card text-bg-dark col">
                     <img src="../images/marketing-service-homepage.png" class="card-img">
                     <div class="card-img-overlay d-flex align-items-center justify-content-center flex-column text-center">
                         <h4 class="card-title">Marketing & Promotional Content</h4>
-                        <p class="card-text underline"><a href="">Learn More</a></p>
+                        <p class="card-text underline"><a href="marketing.html">Learn More</a></p>
                     </div>
                 </div>
             </div>
